# space-trader

./: .editorconfig  Cargo.toml  README.md
src/: download_systems.rs  main.rs  space_traders.rs  ui.rs
src/api/: Cargo.toml  README.md
src/api/docs/: SystemsApi.md
src/api/src/apis/: agents_api.rs  configuration.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  systems_api.rs
src/api/src/models/: get_system_waypoints_traits_parameter.rs  ship_engine.rs  ship_frame.rs  ship_module.rs  ship_mount.rs  ship_reactor.rs  ship_type.rs  system.rs  system_type.rs
src/space_traders/: space_traders_types.rs
src/ui/: galaxy.rs  types.rs  view.rs
